--- a/static/styles.css
+++ b/static/styles.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap");
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 h1,
@@ -13,243 +13,284 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Comfortaa";
+  font-family: "Comfortaa";
 }
 
-a:link, a:visited, a:active{
-    color: #0074b9;
-    text-decoration: none;
+a:link,
+a:visited,
+a:active {
+  color: #0074b9;
+  text-decoration: none;
 }
 
 a:hover {
-    color: #005c93;
-    text-decoration: none;
-  }
+  color: #005c93;
+  text-decoration: none;
+}
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    background: #f3f3f3;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  background: #f3f3f3;
 }
 
 nav {
-    position: fixed;
-    z-index: 100;
-    width: 100%;
-    background-color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    top: 0;
-    left: 0;
-    height: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  top: 0;
+  left: 0;
+  height: 60px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .userControlPannel {
-    justify-content: space-between;
-    float: right;
+  justify-content: space-between;
+  float: right;
 }
 
 .userControlPannel a {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 .invisibleLink {
-    color: black !important;
+  color: black !important;
 }
 
 .page-wrap {
-    top: 60px;
-    margin: 60px auto 120px;
-    padding: 7px 0 0;
-    max-width: 990px;
+  top: 60px;
+  margin: 60px auto 120px;
+  padding: 7px 0 0;
+  max-width: 990px;
 }
 
 .storyList {
-    box-sizing: border-box;
-    width: 650px;
-    height: auto;
-    padding: 10px;
-    background-color: white;
-    display: flex;
-    justify-content: flex-start;
-    overflow-y: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+  box-sizing: border-box;
+  width: 650px;
+  height: auto;
+  padding: 10px;
+  background-color: white;
+  display: flex;
+  justify-content: flex-start;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .storyList::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 .storyList img {
-    border-radius: 50%;
-    width: 55px;
-    height: 55px;
-    border: 3px solid #ccc;
+  border-radius: 50%;
+  width: 55px;
+  height: 55px;
+  border: 3px solid #ccc;
 }
 
 .storyList p {
-    margin: 0px;
-    font-size: 9pt;
-    text-align: center;
-    color: #585858;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  margin: 0px;
+  font-size: 9pt;
+  text-align: center;
+  color: #585858;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .story {
-    width: 70px;
-    padding: 5px;
+  width: 70px;
+  padding: 5px;
 }
 
 .postList {
-    width: 650px;
+  width: 650px;
 }
 
 .card {
-    box-sizing: border-box;
-    border: solid 1px #ccc;
-    height: auto;
-    padding: 0px 10px 10px 10px;
-    margin: 10px 0;
-    background-color: white;
+  box-sizing: border-box;
+  border: solid 1px #ccc;
+  height: auto;
+  padding: 0px 10px 10px 10px;
+  margin: 10px 0;
+  background-color: white;
 }
 
 .card img {
-    width: calc(100% + 20px);
-    height: auto;
-    margin-left: -10px;
+  width: calc(100% + 20px);
+  height: auto;
+  margin-left: -10px;
 }
 
 .card .username {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .post_time {
-    color: rgb(124, 124, 124);
+  color: rgb(124, 124, 124);
 }
 
 .make_comments_hint {
-    border: none;
-    margin-right: 5px;
-    border-width: 0px;
-    outline: none;
-    width: 85%;
+  border: none;
+  margin-right: 5px;
+  border-width: 0px;
+  outline: none;
+  width: 85%;
 }
 
 .make_comments {
-    margin: 10px -10px -10px -10px;
-    border-top: 1px solid #ccc;
+  margin: 10px -10px -10px -10px;
+  border-top: 1px solid #ccc;
 }
 
 .make_comments_inside {
-    margin: 10px;
+  margin: 10px;
 }
 
 .likesCount {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .comments p {
-    margin: 0px;
-    margin-bottom: 5px;
+  margin: 0px;
+  margin-bottom: 5px;
 }
 
-.commentSubmit{
-    float:right;
-    color:#0074b9;
-    border:0px #000 solid;
-    background-color:#fff;
-    font-size: 16px;
+.commentSubmit {
+  float: right;
+  color: #0074b9;
+  border: 0px #000 solid;
+  background-color: #fff;
+  font-size: 16px;
 }
 
 .mainPanel {
-    width: 650px;
-    float: left;
-    display: inline;
+  width: 650px;
+  float: left;
+  display: inline;
 }
 
 .sidePanel {
-    position: fixed;
-    width: 380px;
-    float: left;
-    display: inline;
-    overflow-x: hidden;
-    padding-left: 30px;
-    overflow-y: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+  position: fixed;
+  width: 380px;
+  float: left;
+  display: inline;
+  overflow-x: hidden;
+  padding-left: 30px;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .sidePanel::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 .currUser {
-    width: 370px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+  width: 370px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .currUser h2 {
-    top: 0;
-    display: flex;
-    align-items: center;
+  top: 0;
+  display: flex;
+  align-items: center;
 }
 
-.currUser img{
-    border-radius: 50%; margin-right: 10px;width: 80px;
+.currUser img {
+  border-radius: 50%;
+  margin-right: 10px;
+  width: 80px;
 }
 
 .suggestedUsers {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .suggestedUsers img {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
 }
 
 .suggestedUsers .username {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .suggestedUsers,
 .suggestedUsers * {
-    padding: 5px;
+  padding: 5px;
+}
+
+.red {
+  color: #cf0c0c !important;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  border-radius: 30px;
+  width: 80%;
+}
+
+.closePostModal {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.closePostModal:hover,
+.closePostModal:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 1020px) {
-    .mainPanel {
-        width: 100%;
-    }
-    .storyList {
-        box-sizing: border-box;
-        width: calc(100% - 20px);
-        height: auto;
-        padding: 10px;
-        margin: 10px;
-    }
-    .postList {
-        box-sizing: border-box;
-        width: calc(100% - 20px);
-        height: auto;
-        margin: 10px;
-    }
-    .sidePanel {
-        display: none;
-    }
-}
-
-.red{
-    color:  #cf0c0c !important;
+  .mainPanel {
+    width: 100%;
+  }
+  .storyList {
+    box-sizing: border-box;
+    width: calc(100% - 20px);
+    height: auto;
+    padding: 10px;
+    margin: 10px;
+  }
+  .postList {
+    box-sizing: border-box;
+    width: calc(100% - 20px);
+    height: auto;
+    margin: 10px;
+  }
+  .sidePanel {
+    display: none;
+  }
 }
