--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
             {% include 'includes/stories.html' %} {% include 'includes/cards.html' %}
         </div>
         {% include 'includes/suggestions.html' %}
+        {% include 'includes/detail.html' %}
     </div>
     </div>
 </body>
